--- a/grupo-de-musica.html
+++ b/grupo-de-musica.html
@@ -17,6 +17,7 @@
             body{
                 font-size: 20px;
                 font-family: verdana;
+                background-color: burlywood;
             }
         </style>
     </head>
